--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,24 @@
 buildscript {
-    ext {
-        grailsVersion = project.grailsVersion
-    }
     repositories {
         mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath 'com.bertramlabs.plugins:asset-pipeline-gradle:2.1.1'
+        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.11.6"
+        classpath "org.grails.plugins:hibernate5:6.0.4"
     }
 }
 
-plugins {
-    id "io.spring.dependency-management" version "0.4.0.RELEASE"
-}
-
 version "0.1"
-group "heroku"
+group "multidb31"
 
-apply plugin: "spring-boot"
-apply plugin: "war"
-apply plugin: "asset-pipeline"
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: "org.grails.grails-web"
-apply plugin: "org.grails.grails-gsp"
-
-ext {
-    grailsVersion = project.grailsVersion
-    gradleWrapperVersion = project.gradleWrapperVersion
-}
-
-assets {
-    minifyJs = true
-    minifyCss = true
-
-    minifyOptions = [
-            languageMode: 'ES6',
-            targetLanguage: 'ES6'
-    ]
-}
+apply plugin:"eclipse"
+apply plugin:"idea"
+apply plugin:"war"
+apply plugin:"org.grails.grails-web"
+apply plugin:"org.grails.grails-gsp"
+apply plugin:"asset-pipeline"
 
 repositories {
     mavenLocal()
@@ -56,52 +34,38 @@ dependencyManagement {
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-logging"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-autoconfigure"
-    runtime 'org.postgresql:postgresql:9.4-1201-jdbc4'
-    provided "org.springframework.boot:spring-boot-starter-tomcat"
+    compile "org.grails:grails-core"
+    compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile "org.springframework.boot:spring-boot-starter-tomcat"
     compile "org.grails:grails-dependencies"
     compile "org.grails:grails-web-boot"
-
-    compile "org.grails.plugins:hibernate"
     compile "org.grails.plugins:cache"
-    compile "org.hibernate:hibernate-ehcache"
-
-    runtime "org.grails.plugins:asset-pipeline"
-    runtime "org.grails.plugins:scaffolding"
-
+    compile "org.grails.plugins:scaffolding"
+    compile "org.grails.plugins:hibernate5"
+    compile "org.hibernate:hibernate-core:5.1.2.Final"
+    compile "org.hibernate:hibernate-ehcache:5.1.2.Final"
+    console "org.grails:grails-console"
+    profile "org.grails.profiles:web"
+    runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.11.6"
+    runtime "com.h2database:h2"
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
-
-    // Note: It is recommended to update to a more robust driver (Chrome, Firefox etc.)
-    testRuntime 'org.seleniumhq.selenium:selenium-htmlunit-driver:2.44.0'
-
-    console "org.grails:grails-console"
-
-    compile 'org.eclipse.jetty:jetty-runner:9.2.11.v20150529'
-    compile 'com.github.jsimone:webapp-runner:8.0.30.2'
+    testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
+    testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = gradleWrapperVersion
+bootRun {
+    jvmArgs('-Dspring.output.ansi.enabled=always')
 }
 
-task stage() {
-    dependsOn clean, war
-}
-tasks.stage.doLast() {
-    delete fileTree(dir: "build/distributions")
-    delete fileTree(dir: "build/assetCompile")
-    delete fileTree(dir: "build/distributions")
-    delete fileTree(dir: "build/libs", exclude: "*.war")
-}
-war.mustRunAfter clean
 
-task copyToLib(type: Copy) {
-    into "$buildDir/server"
-    from(configurations.compile) {
-        include "webapp-runner*"
-    }
-}
+assets {
+    minifyJs = true
+    minifyCss = true
 
-stage.dependsOn(copyToLib)
+    minifyOptions = [
+            languageMode: 'ES6',
+            targetLanguage: 'ES6'
+    ]
+}
