--- a/build.gradle
+++ b/build.gradle
@@ -59,13 +59,27 @@ bootRun {
     jvmArgs('-Dspring.output.ansi.enabled=always')
 }
 
-
 assets {
-    minifyJs = true
+    minifyJs = false
     minifyCss = true
-
-    minifyOptions = [
-            languageMode: 'ES6',
-            targetLanguage: 'ES6'
-    ]
 }
+
+task stage() {
+    dependsOn clean, war
+}
+tasks.stage.doLast() {
+    delete fileTree(dir: "build/distributions")
+    delete fileTree(dir: "build/assetCompile")
+    delete fileTree(dir: "build/distributions")
+    delete fileTree(dir: "build/libs", exclude: "*.war")
+}
+war.mustRunAfter clean
+
+task copyToLib(type: Copy) {
+    into "$buildDir/server"
+    from(configurations.compile) {
+        include "webapp-runner*"
+    }
+}
+
+stage.dependsOn(copyToLib)
